# monad-composition

./: .gitignore  AGENT.md  Cargo.toml  README.md
memory/: JOURNAL.md
src/: composition.rs  identity.rs  lib.rs  maybe.rs  reader.rs  state.rs  writer.rs
